--- a/TRMDesktopUI/Views/SalesView.xaml
+++ b/TRMDesktopUI/Views/SalesView.xaml
@@ -31,7 +31,13 @@
         <!--Column Zero-->
         <TextBlock Text="ITEMS" Grid.Row="1" Grid.Column="0" />
         <ListBox x:Name="Products" Grid.Row="2" Grid.Column="0"
-                 MinHeight="200" MinWidth="150" />
+                 MinHeight="200" MinWidth="150" >
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding ProductName}" />
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
         <!--Column One-->
         <StackPanel Orientation="Vertical" Grid.Row="2" Grid.Column="1" Margin="20 0">
             <TextBlock Text="Quantity" />
