Add Saving the Cart to the database.
All the changes necessary to save the shopping cart data to the DB.

--- a/TRMDesktopUI/Views/SalesView.xaml
+++ b/TRMDesktopUI/Views/SalesView.xaml
@@ -61,7 +61,7 @@
         <!--Column Two-->
         <TextBlock Text="CART" Grid.Row="1" Grid.Column="2" />
         <ListBox x:Name="Cart" Grid.Row="2" Grid.Column="2"
-                 MinHeight="200" MinWidth="150" >
+                 MinHeight="200" MinWidth="150" SelectionChanged="Cart_SelectionChanged" >
 
             <ListBox.ItemTemplate>
                 <DataTemplate>
