Add Remove From Cart Functionality.

--- a/TRMDesktopUI/Views/SalesView.xaml
+++ b/TRMDesktopUI/Views/SalesView.xaml
@@ -61,8 +61,8 @@
         <!--Column Two-->
         <TextBlock Text="CART" Grid.Row="1" Grid.Column="2" />
         <ListBox x:Name="Cart" Grid.Row="2" Grid.Column="2"
-                 MinHeight="200" MinWidth="150" SelectionChanged="Cart_SelectionChanged" >
-
+                 MinHeight="200" MinWidth="150" SelectionChanged="Cart_SelectionChanged"
+                 SelectedItem="{ Binding SelectedCartItem}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <TextBlock Text="{Binding DisplayText}" />
